# 2DFM2NDRL

./: .gitignore  .gitmodules  2025-07-08-eating-game-process-in-suspended-state.txt  2025-07-08-this-session-is-being-continued-from-a-previous-co.txt  @analysis.md  CLAUDE.local.md  CLAUDE.md  CMakeLists.txt  CMakelists.txt  FM2K_CncDDraw.cpp  FM2K_CncDDraw_DefaultIni.inc  FM2K_DDrawRedirect.cpp  FM2K_DLLInjector.cpp  FM2K_DLLInjector.h  FM2K_DirectHooks.cpp  FM2K_DirectHooks.h  FM2K_DiscordAuth.cpp  FM2K_DiscordAuth.h  FM2K_GameIni.cpp  FM2K_GameIni.h  FM2K_GameInstance.cpp  FM2K_GameInstance.h  FM2K_GekkoNetBridge.cpp  FM2K_GekkoNetBridge.h  FM2K_Hooks.cpp  FM2K_Hooks.h  FM2K_HubClient.cpp  FM2K_HubClient.h  FM2K_HubClient_json.cpp  FM2K_HubClient_transport.cpp  FM2K_Integration.h  FM2K_KgtParser.cpp  FM2K_KgtParser.h  FM2K_LauncherUI.cpp  FM2K_LauncherUI_DesignSandbox.cpp  FM2K_LauncherUI_DesignSandbox.h  FM2K_Locale.h  FM2K_Memory.cpp  FM2K_NetworkSession.cpp  FM2K_PortMapper.cpp  (+57 more)
.claude/: settings.local.json
FM2KHook/: CMakeLists.txt
FM2KHook/docs/: cssnotes_input_history.md  process_game_inputs_analysis.md
FM2KHook/src/: # FM2K Rollback Implementation Plan.md  address.h  boot_object_analyzer.cpp  common.h  css_handler.cpp  css_handler.h  css_sync.cpp  css_sync.h  css_sync_simple.cpp  css_tcp_sync.cpp  css_tcp_sync.h  ddraw_constants.h  ddraw_hooks.cpp  ddraw_hooks.h  ddraw_types.h  debug_features.cpp  debug_features.h  directdraw_compat.cpp  directdraw_compat.h  dllmain.cpp  dllmain_orig.cpp  dllmain_simple.cpp  dummy_directdraw.cpp  dummy_directdraw.h  fm2k_hook.cpp  fm2k_hook.h  game_patches.cpp  game_patches.h  game_state_detector.cpp  game_state_detector.h  game_state_machine.cpp  game_state_machine.h  gekkonet_hooks.cpp  gekkonet_hooks.h  globals.cpp  globals.h  hooks.cpp  hooks.h  imgui_overlay.cpp  input_handler.cpp  (+31 more)
FM2KHook/src/audio/: sound_rollback.cpp  sound_rollback.h
FM2KHook/src/core/: dllmain.cpp  dllmain_internal.h  dllmain_logging.cpp  globals.cpp  globals.h  main_loop_trampoline.cpp  main_loop_trampoline.h  trampoline_battle.cpp  trampoline_css.cpp  trampoline_internal.h  trampoline_native.cpp  trampoline_pacing.cpp  trampoline_render.cpp  trampoline_spectator.cpp
FM2KHook/src/hooks/: combat_state.cpp  combat_state.h  csm_diag.cpp  css_autoconfirm.cpp  css_autoconfirm.h  css_fastsound.cpp  css_fastsound.h  game_patches.cpp  game_patches.h  hooks.cpp  hooks.h  hooks_game_mode.cpp  hooks_getinput.cpp  hooks_input.cpp  hooks_internal.h  hooks_render.cpp  hooks_rng.cpp  hooks_update.cpp  hooks_vfs.cpp  input.cpp  input.h  per_game_patches.cpp  per_game_patches.h  per_game_patches_battle.cpp  per_game_patches_fm95.cpp  per_game_patches_internal.h  render_simd.cpp  render_simd.h  round_events.cpp  round_events.h  wndproc_subclass.cpp  wndproc_subclass.h
FM2KHook/src/locale/: locale_spoof.cpp  locale_spoof.h
FM2KHook/src/netplay/: addr6_util.cpp  addr6_util.h  control_channel.cpp  control_channel.h  control_channel_gekko.cpp  control_channel_internal.h  control_channel_io.cpp  control_channel_send.cpp  delay_math.h  game_hash.cpp  game_hash.h  nat_traversal.cpp  nat_traversal.h  netplay.cpp  netplay.h  netplay_barriers.cpp  netplay_battle.cpp  netplay_battle_end.cpp  netplay_battle_events.cpp  netplay_battle_phase.cpp  netplay_chat.cpp  netplay_control.cpp  netplay_css.cpp  netplay_desync.cpp  netplay_internal.h  netplay_spectate.cpp  netplay_state.h  replay.cpp  replay.h  savestate.cpp  savestate.h  savestate_fm2k_diag.cpp  savestate_fm2k_load.cpp  savestate_fm2k_save.cpp  savestate_fm95.cpp  savestate_internal.h  spec_backfill.cpp  spec_health.cpp  spec_host_events.cpp  spec_impair.cpp  (+17 more)
FM2KHook/src/parity/: parity_recorder.cpp  parity_recorder.h
FM2KHook/src/ui/: fc_hud.cpp  fc_hud.h  imgui_overlay.cpp  imgui_overlay.h  imgui_overlay_internal.h  imgui_overlay_render.cpp  input_binder.cpp  input_binder.h  input_binder_gamepads.cpp  input_binder_internal.h  input_binder_profiles.cpp  input_binder_sample.cpp  input_binder_ui.cpp  screenshot.cpp  screenshot.h  shared_mem.cpp  shared_mem.h
FM2KHook/src/util/: pii_scrub.cpp  pii_scrub.h  zip_writer.cpp  zip_writer.h
FM2KHook/src/vfs/: fpk_reader.cpp  fpk_reader.h
analysis/: directplay.md
docs/: 2dfm_games_master_list.md  2dfm_object_system.md  A Game-Agnostic Guide to Modernizing Dir.md  FM2K Rollback - Whole-Product Design.html  FM2K_Hook_Implementation.md  FM2K_Locale_Spoof_Analysis.md  FM2K_Matchmaking_Design.md  FM2K_Rollback_Plan.md  FM2K_Rollback_Production.md  FM2K_Rollback_Research.md  FM2K_Rollback_TestPlan.md  FM2K_Spectator_Design.md  FM95_Savestate_Inventory.md  FM95_Support_Status.md  FRAMESTEP_ANALYSIS.md  INPUT_SYSTEM_ARCHITECTURE.md  Launcher_Roadmap.md  LilithPort_SDL3_Migration_Strategy.md  ROLLBACK_INSIGHTS.md  RenderInfo_DDraw_SDL3_Migration.md  SDL3_Direct_Takeover_Implementation.md  SDL3_quickreference.txt  SDL3_quickreference.txtZone.Identifier  System_Improvements.md  c3.5_round_events_ida_handoff.md  c3.5_status_and_followups.md  direct_takeover.md  games_catalog.md  giuroll.md  hub_protocol_v2.md  input_descriptor.md  input_pipeline_architecture.md  july7-2025.md  july8-2025.md  july8-early.md  launcher_testing_infrastructure_design.md  quickreF_sdl3_log.txt  quickref_SDL3_FULL.txt  quickref_sdl3_asyncio.txt  quickref_sdl3_atomic.txt  (+26 more)
framestep/: CMakeLists.txt  framestep.cpp  framestep.rs  framestep_sdl3.cpp
frontend/: AppShell.cpp  AppShell.h  Settings.cpp  Settings.h  ShellState.cpp  ShellState.h  Theme.cpp  Theme.h
games/: REGISTRY.md  catalog.json  registry.json  registry_overrides.json
hub/: hub.py
locales/: en.ini  es.ini  ja.ini
old/: ctx.cpp  game_addresses.hpp  game_loop.cpp  hook.cpp  hook_manager.cpp  hooks.cpp  initGame.cpp  old_cmakelists.txt  sdl3_context.cpp  sdl3_directdraw_compat_new.cpp  simple_input_hooks.cpp  simple_input_hooks.h  surface_management.cpp
relay/: README.md  control.go  forwarder.go  forwarder_test.go  go.mod  loopback_test.py  main.go
scripts/: cut_release.sh  make_version.sh  package_release.sh  promote_release.sh  (+1 more)
(+305 files in other folders)
